# Contro

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
contro/: asgi.py  settings.py  urls.py  wsgi.py
contro/apps/api/: apps.py  models.py  permissions.py  urls.py  views.py
contro/apps/content/: admin.py  apps.py  dynamic_models.py  forms.py  models.py  urls.py  views.py
contro/apps/content/management/commands/: sync_content_types.py
contro/apps/content/migrations/: 0001_initial.py
contro/apps/content/services/: __init__.py  hooks.py  schema.py  serializers.py
contro/apps/content/templatetags/: content_extras.py
contro/apps/core/: apps.py
contro/apps/graphql/: apps.py  dynamic.py  schema.py  views.py
contro/apps/iam/: admin.py  apps.py  authentication.py  backends.py  forms.py  models.py  urls.py  views.py
contro/apps/iam/migrations/: 0001_initial.py
contro/apps/iam/services/: __init__.py  rbac.py  tokens.py
templates/content/: entry_form.html  entry_list.html  field_form.html  field_list.html  type_form.html  type_list.html
templates/iam/: base.html  dashboard.html  login.html
